--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet" />
 
-    <title>Vite + React</title>
+    <title>React Facts</title>
   </head>
   <body>
     <div id="root"></div>
